# qtacrylicmaterial

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  windows.manifest  windows.rc
examples/quick/: CMakeLists.txt  main.cpp
examples/quick/qml/: main.qml
examples/widget/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
src/: CMakeLists.txt  qtacryliceffecthelper.cpp  qtacryliceffecthelper.h  qtacryliceffecthelper_win32.cpp  qtacrylichelper.rc  qtacrylichelper_global.h  qtacrylicitem.cpp  qtacrylicitem.h  qtacrylicwidget.cpp  qtacrylicwidget.h  utilities.cpp  utilities.h  utilities_win32.cpp
